overflow fix

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -8,7 +8,7 @@
 .App {
   background: #1c5bd6;
   height: 100vh;
-  overflow: scroll;
+  overflow: auto;
 }
 
 body {
